--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,12 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/poc?useSSL=false
+spring.datasource.url = jdbc:mysql://eclipse.cafiv9ach4bo.us-east-2.rds.amazonaws.com:3306/poc?useSSL=false
+
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = 
+spring.datasource.password = Pass1234
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
