Changes deployment type to war

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.madhav.project</groupId>
 	<artifactId>SpringDemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>SpringDemo</name>
 	<description>Demo project for Spring Boot</description>
